--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <div class="left retro-btn"><a href="me.heic">Ritwik Upadhyay</a></div>
+            <div class="left retro-btn"><a href="me.jpg">Ritwik Upadhyay</a></div>
             <div class="right">
                 <ul>
                     <li class="retro-btn"><a href="#home">Home</a></li>
@@ -41,7 +41,7 @@
             </div>
             <div class="rightSection">
                 <div class="image-container">
-                    <img src="me.HEIC" alt="Ritwik illustration" class="retro-img">
+                    <img src="me.jpg" alt="Ritwik illustration" class="retro-img">
                 </div>
             </div>
         </section>
@@ -160,7 +160,7 @@
                 <div class="portfolio">Developer</div>
                 <div class="portfolio">Portfolio</div>
             </div>
-            <div class="emblem"><a href="sign.HEIF"><img src="sign.HEIF" alt="my sign"></a></div>
+            <div class="emblem"><a href="sign.jpg"><img src="sign.jpg" alt="my sign"></a></div>
             <div class="footer-second">
                 <ul>
                     <li class="retro-btn"><a href="#home">Home</a></li>
