--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="portfolio">Developer</div>
                 <div class="portfolio">Portfolio</div>
             </div>
-            <div class="emblem"><a href="sign.jpg"><img src="sign.jpg" alt="my sign"></a></div>
+            <div class="emblem"><a href="sign.png"><img src="sign.png" alt="my sign"></a></div>
             <div class="footer-second">
                 <ul>
                     <li class="retro-btn"><a href="#home">Home</a></li>
