--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
                     </div>
                     <div class="project-desc">Weathery</div>
                 </a>
+                <hr>
+                <a href="https://ritwik-upadhyay.github.io/RitwikPortfolio/" target="_blank">
+                    <div class="project-card">
+                        <img src="rport.jpeg" alt="My Project" class="retro-img">
+                        <div class="overlay">
+                            <div class="overlay-text">A Personal Portfolio Website having details like self-introduction in about section, self-developed projects, and contact details along with a resume downloading button, and visiting github button; made using HTML, CSS and typed.js.
+
+</div>
+                        </div>
+                    </div>
+                    <div class="project-desc">My Portfolio</div>
+                </a>
 
 
             </div>
