--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
                     </div>
                     <div class="project-desc">My Portfolio</div>
                 </a>
+                <hr>
+                <a href="https://ritwik-upadhyay.github.io/Trance/" target="_blank">
+                    <div class="project-card">
+                        <img src="trance.jpeg" alt="My Project" class="retro-img">
+                        <div class="overlay">
+                            <div class="overlay-text">A music player web app made using HTML, CSS, and JavaScript.</div>
+                        </div>
+                    </div>
+                    <div class="project-desc">Trance</div>
+                </a>
 
 
             </div>
