--- a/index.html
+++ b/index.html
@@ -154,6 +154,16 @@
                     </div>
                     <div class="project-desc">Trance</div>
                 </a>
+                <hr>
+                <a href="https://ritwik-upadhyay.github.io/2048/" target="_blank">
+                    <div class="project-card">
+                        <img src="2048.jpeg" alt="My Project" class="retro-img">
+                        <div class="overlay">
+                            <div class="overlay-text">A classic 2048 tiles game made using HTML, CSS, and JavaScript.</div>
+                        </div>
+                    </div>
+                    <div class="project-desc">2048</div>
+                </a>
 
 
             </div>
