Add StarBlaze project card to index.html

--- a/index.html
+++ b/index.html
@@ -164,6 +164,17 @@
                     </div>
                     <div class="project-desc">2048</div>
                 </a>
+                <hr>
+                <a href="https://ritwik-upadhyay.github.io/StarBlaze/" target="_blank">
+                    <div class="project-card">
+                        <img src="starblaze.jpeg" alt="My Project" class="retro-img">
+                        <div class="overlay">
+                            <div class="overlay-text">A retro space war game made using HTML, CSS, and JavaScript.</div>
+                        </div>
+                    </div>
+                    <div class="project-desc">StarBlaze</div>
+                </a>
+                
 
 
             </div>
