--- a/index.html
+++ b/index.html
@@ -174,6 +174,16 @@
                     </div>
                     <div class="project-desc">StarBlaze</div>
                 </a>
+                <hr>
+                <a href="https://noted-0dfn.onrender.com" target="_blank">
+                    <div class="project-card">
+                        <img src="noted.jpeg" alt="My Project" class="retro-img">
+                        <div class="overlay">
+                            <div class="overlay-text">A full stack notes app made using Node.js, Express, and MongoDB Atlas.</div>
+                        </div>
+                    </div>
+                    <div class="project-desc">Noted</div>
+                </a>
                 
 
 
